--- a/src/app/pages/report/funnel-report/report-funnel-course/report-funnel-course.component.html
+++ b/src/app/pages/report/funnel-report/report-funnel-course/report-funnel-course.component.html
@@ -59,13 +59,13 @@
         </div>
     </div>
 
-    <nz-table #nzTable [nzLoading]="isLoading" [nzData]="items" nzTableLayout="fixed" [nzScroll]="{ y: 'auto' }"
+    <nz-table #nzTable [nzLoading]="isLoading" [nzData]="items" nzTableLayout="fixed" [nzScroll]="{ x: 'auto' }"
         nzShowPagination="false" (nzQueryParams)="onQueryParamsChange($event)">
-        <thead>
+        <thead style="overflow-y: hidden;">
             <tr>
-                <th [nzLeft]="true" nzWidth="60px" nzAlign="center">STT</th>
-                <th nzWidth="180px" nzAlign="center">Tên khóa học</th>
-                <th nzWidth="180px" nzAlign="center">Tên lớp học</th>
+                <th [nzLeft]="true" nzWidth="50px" nzAlign="center">STT</th>
+                <th nzWidth="160px" [nzLeft]="true" nzAlign="center">Tên khóa học</th>
+                <th nzWidth="160px" [nzLeft]="true" nzAlign="center">Tên lớp học</th>
                 <th nzWidth="180px" nzColumnKey="totalAdsAmount" [nzSortFn]="true" nzAlign="center">Số tiền Ads</th>
                 <th nzWidth="180px" nzColumnKey="totalNumberOfRegistrations" [nzSortFn]="true" nzAlign="center">Số lượt
                     đăng ký</th>
@@ -96,14 +96,14 @@
                 <th [nzRight]="true" nzWidth="120px" nzAlign="center">Chức năng</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody style="overflow-y: hidden;">
             <ng-container *ngFor="let data of nzTable.data; let i = index">
                 <tr>
                     <!-- [nzExpand]="expandSet.has(data.courseId)" (nzExpandChange)="onExpandChange(data.courseId, $event)" -->
                     <td [nzLeft]="true">{{i + 1 + ((currentPage - 1) * pageSize)}} </td>
                     <!-- <td> {{ data.funnelCourseDate | date: 'dd-MM-yyy'}} </td> -->
-                    <td nzAlign="center"> {{ data.courseName }} </td>
-                    <td nzAlign="center"> {{ data.className }} </td>
+                    <td nzAlign="center" [nzLeft]="true"> {{ data.courseName }} </td>
+                    <td nzAlign="center" [nzLeft]="true"> {{ data.className }} </td>
                     <td nzAlign="right"> {{ data.totalAdsAmount }} </td>
                     <td nzAlign="right"> {{ data.totalNumberOfRegistrations }} </td>
                     <td nzAlign="right"> {{ data.totalCpa }} </td>
