--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+:root {
+    --ds-system-background-scroll: rgba(161, 161, 161, 0.6);
+}
+
 @for $i from 100 through 900 {
     .font-weight-#{$i} {
         font-weight: #{$i} !important;
@@ -122,3 +126,13 @@
 .justify-content-end {
     justify-content: flex-end !important;
 }
+
+// ::-webkit-scrollbar {
+//     width: 8px;
+//     height: 8px;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//     border-radius: 25px;
+//     background: var(--ds-system-background-scroll);
+// }
