--- a/src/app/pages/report/elearning-report/report-member-ship-course/report-member-ship-course.component.html
+++ b/src/app/pages/report/elearning-report/report-member-ship-course/report-member-ship-course.component.html
@@ -1,1 +1,123 @@
-<p>report-member-ship-course works!</p>
+<div class="title-page">
+    Báo cáo khóa học thành viên
+</div>
+<div>
+    <div nz-row style="margin-bottom: 20px;" (keyup.enter)="openSearch()">
+        <div nz-col [nzSpan]="24" class="search-area d-flex">
+            <div class="d-flex justify-content-start" style="width: 50%;">
+                <form nz-form [formGroup]="myForm" class="w-100">
+                    <div nz-row [nzGutter]="24">
+                        <div nz-col [nzSpan]="6">
+                            <nz-form-item>
+                                <nz-select nzPlaceHolder="Tìm kiếm theo thời gian" class="min-width-194"
+                                    formControlName="dateTimeTypeSearchCtrl" style="width: 100%;" [nzAllowClear]="true">
+                                    <nz-option *ngFor="let option of filterDataSearch" [nzValue]="option.value"
+                                        [nzLabel]="option.label"></nz-option>
+                                </nz-select>
+                            </nz-form-item>
+                        </div>
+                        <div nz-col [nzSpan]="18" style="width: 70%;" class="d-flex">
+                            <nz-form-item *ngIf="ctrls.dateTimeTypeSearchCtrl.value == 0" class="mg-r-20">
+                                <nz-range-picker formControlName="dateTimeRangeCtrl"
+                                    [nzFormat]="dateFormat"></nz-range-picker>
+                            </nz-form-item>
+                            <nz-form-item *ngIf="ctrls.dateTimeTypeSearchCtrl.value == 1" class="mg-r-20">
+                                <nz-date-picker nzMode="month" [nzFormat]="monthFormat" formControlName="monthCtrl"
+                                    style="width: 150px;"></nz-date-picker>
+                            </nz-form-item>
+                            <nz-form-item *ngIf="ctrls.dateTimeTypeSearchCtrl.value == 2" class="mg-r-20">
+                                <div style="width: 80%;display: flex;">
+                                    <nz-date-picker nzMode="year" formControlName="quarterYearCtrl"
+                                        class="min-width-140 mg-r-10"></nz-date-picker>
+                                    <nz-select nzPlaceHolder="---Chọn---" formControlName="quarterOfYearCtrl"
+                                        class="min-width-140">
+                                        <nz-option *ngFor="let option of lstQuarterOfYear" [nzValue]="option.value"
+                                            [nzLabel]="option.label"></nz-option>
+                                    </nz-select>
+                                </div>
+                            </nz-form-item>
+                            <nz-form-item *ngIf="ctrls.dateTimeTypeSearchCtrl.value == 3" class="mg-r-20">
+                                <nz-date-picker nzMode="year" formControlName="yearCtrl"
+                                    style="width: 193px;"></nz-date-picker>
+                            </nz-form-item>
+                            <nz-form-item>
+                                <button nz-button type="button" [nzType]="'primary'" (click)="openSearch()"
+                                    class="mg-r-10">Tìm kiếm</button>
+                                <button nz-button type="button" [nzType]="'primary'" (click)="openFilter()"
+                                    class="mg-r-10">Lọc</button>
+                            </nz-form-item>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="d-flex justify-content-end" style="width: 50%;">
+                <button nz-button type="button" [nzType]="'primary'" (click)="syncData()" nz-tooltip
+                    nzTooltipTitle="Đồng bộ">
+                    <span nz-icon nzType="sync" nzTheme="outline"></span></button>
+            </div>
+        </div>
+    </div>
+
+    <nz-table #nzTable [nzLoading]="isLoading" [nzData]="items" nzTableLayout="fixed" [nzScroll]="{ x: 'auto' }"
+        nzShowPagination="false" (nzQueryParams)="onQueryParamsChange($event)">
+        <thead style="overflow-y: hidden;">
+            <tr>
+                <th [nzLeft]="true" nzWidth="50px" nzAlign="center">STT</th>
+                <th nzWidth="160px" [nzLeft]="true" nzAlign="center">Tên khóa học</th>
+                <th nzWidth="180px" nzColumnKey="adsAmount" [nzSortFn]="true" nzAlign="center">Số tiền Ads</th>
+                <th nzWidth="180px" nzColumnKey="mumberOfRegistrations" [nzSortFn]="true" nzAlign="center">Số người
+                    đăng ký</th>
+                <th nzWidth="180px" nzColumnKey="numberOfLearners5Percent" [nzSortFn]="true" nzAlign="center">Số người học 5%</th>
+                <th nzWidth="180px" nzColumnKey="numberOfLearners25Percent" [nzSortFn]="true" nzAlign="center">Số người học 25%
+                </th>
+                <th nzWidth="180px" nzColumnKey="numberOfLearners50Percent" [nzSortFn]="true" nzAlign="center">Số người học 50%</th>
+                <th nzWidth="180px" nzColumnKey="numberOfLearners75Percent" [nzSortFn]="true" nzAlign="center">Số người học 75%</th>
+                <th nzWidth="180px" nzColumnKey="numberOfLearners90Percent" [nzSortFn]="true" nzAlign="center">Số người học 90%</th>
+                <th nzWidth="180px" nzColumnKey="numberOfLearners100Percent" [nzSortFn]="true" nzAlign="center">Số người học 100%</th>
+                <th nzWidth="180px" nzAlign="center">Tên diễn giả</th>
+                <th nzWidth="180px" nzAlign="center">Số điện thoại</th>
+                <th nzWidth="180px" nzAlign="center">Tổ chức</th>
+                <th [nzRight]="true" nzWidth="120px" nzAlign="center">Chức năng</th>
+            </tr>
+        </thead>
+        <tbody style="overflow-y: hidden;">
+            <ng-container *ngFor="let data of nzTable.data; let i = index">
+                <tr>
+                    <!-- [nzExpand]="expandSet.has(data.courseId)" (nzExpandChange)="onExpandChange(data.courseId, $event)" -->
+                    <td [nzLeft]="true">{{i + 1 + ((currentPage - 1) * pageSize)}} </td>
+                    <!-- <td> {{ data.funnelCourseDate | date: 'dd-MM-yyy'}} </td> -->
+                    <td nzAlign="center" [nzLeft]="true"> {{ data.courseElearningName }} </td>
+                    <td nzAlign="right"> {{ data.adsAmount }} </td>
+                    <td nzAlign="right"> {{ data.mumberOfRegistrations }} </td>
+                    <td nzAlign="right"> {{ data.numberOfLearners5Percent }} </td>
+                    <td nzAlign="right"> {{ data.numberOfLearners25Percent }} </td>
+                    <td nzAlign="right"> {{ data.numberOfLearners50Percent }} </td>
+                    <td nzAlign="right"> {{ data.numberOfLearners75Percent }}</td>
+                    <td nzAlign="right"> {{ data.numberOfLearners90Percent  }} </td>
+                    <td nzAlign="right"> {{ data.numberOfLearners100Percent }} </td>
+                    <td nzAlign="center"> {{ data.speakerName }} </td>
+                    <td nzAlign="center"> {{ data.phoneNumber }} </td>
+                    <td nzAlign="center"> {{ data.organizationName }} </td>
+                    <td [nzRight]="true" nzAlign="center">
+                        <button nz-button nzType="default" nzShape="circle" nz-tooltip
+                            nzTooltipTitle="Xem quá trình hoạt động" (click)="onSeeProcess()"><span nz-icon
+                                nzType="rise" nzTheme="outline"></span></button>
+                        <button nz-button nzType="default" nzShape="circle" nz-tooltip
+                            nzTooltipTitle="Xem bảng xếp hạng" (click)="onSeeRanking()"> <span nz-icon
+                                nzType="ordered-list" nzTheme="outline"></span></button>
+                    </td>
+                </tr>
+            </ng-container>
+        </tbody>
+    </nz-table>
+    <div class="table-footer paging-table header-btn">
+        <div class="paging-table-right" style="margin-top: 20px;" *ngIf="items.length > 0">
+            <nz-pagination class="pagination" [(nzPageSize)]="pageSize" [(nzPageIndex)]="currentPage"
+                [nzTotal]="totalItem" (nzPageIndexChange)="onPageChange($event)"
+                (nzPageSizeChange)="nzPageSizeChange($event);" [nzShowTotal]="totalTemplate"
+                nzShowSizeChanger></nz-pagination>
+            <ng-template #totalTemplate let-total>Tổng có {{ totalItem }} khóa học</ng-template>
+        </div>
+    </div>
+</div>
