fix: refactor filter table

--- a/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
+++ b/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
@@ -38,11 +38,20 @@
         </ng-template>
       </table-column>
       <table-column header="Số tiền" key="price" [width]="'150px'"></table-column>
-      <table-column header="Thanh toán" key="status" [width]="'180px'">
+      <table-column header="Thanh toán" key="isPay" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-invalid" *ngIf="data.isPay === 0">Chưa thanh toán</span>
-          <span class="text-warning" *ngIf="data.isPay === 1">Thanh toán một phần</span>
-          <span class="text-valid" *ngIf="data.isPay === 2">Đã thanh toán</span>
+          <span *ngIf="data.isPay === 0">Chưa thanh toán</span>
+          <span *ngIf="data.isPay === 1">Đã thanh toán</span>
+          <span *ngIf="data.isPay === 2">Thanh toán một phần</span>
+          <span *ngIf="data.isPay === 3">Thanh toán thừa</span>
+          <span *ngIf="data.isPay === 4">Thanh toán thừa</span>
+          <span *ngIf="data.isPay === 5">Hoàn tiền thừa</span>
+        </ng-template>
+      </table-column>
+      <table-column header="Xác thực thanh toán" key="isVerifyPay" [width]="'180px'">
+        <ng-template appCell let-data>
+          <span class="text-invalid" *ngIf="!data.isVerifyPay">Chưa xác thực</span>
+          <span class="text-valid" *ngIf="data.isVerifyPay">Đã xác thực</span>
         </ng-template>
       </table-column>
       <table-column header="Tên học viên" key="name" [width]="'180px'"></table-column>
