fix: fix logic payment check component

--- a/src/app/pages/student/components/payment-check/payment-check.component.html
+++ b/src/app/pages/student/components/payment-check/payment-check.component.html
@@ -13,7 +13,7 @@
 
       <div nz-col [nzSpan]="12">
         <span>
-          Số tiền phải thanh toán
+          Số tiền khoá học
         </span>
 
         <div>
@@ -30,7 +30,7 @@
 
       <div nz-col [nzSpan]="12">
         <span>
-          Số tiền đã thanh toán
+          Số tiền khách thanh toán
         </span>
 
         <div>
