--- a/src/app/pages/student/components/refund-request/refund-request.component.scss
+++ b/src/app/pages/student/components/refund-request/refund-request.component.scss
@@ -1,4 +1,69 @@
+.content{
+  max-height: 60vh;
+  overflow: scroll;
+}
+
+::-webkit-scrollbar{
+  width: 0px;
+}
+
 .text-danger{
   color: red;
   width: 100%;
+}
+
+.error-border{
+  border-color: red;
+}
+
+.upload-file {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.upload{
+  display: block;
+  height: 32px;
+  width: 228px;
+  border: 1px solid #d9d9d9;
+  text-align: center;
+  line-height: 32px;
+  cursor: pointer;
+  padding: 0 15px;
+  position: relative;
+  span{
+    margin-right: 8px;
+  }
+
+  &:hover{
+    border: 1px solid #40a9ff;
+    color: #40a9ff;
+  }
+}
+
+.file-name{
+  text-align: start;
+  position: absolute;
+  left: 240px;
+  color: #001529!important;
+  width: 100%;
+  top: 0;
+}
+.img-paste {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  border: 1px dashed #d9d9d9;
+  min-height: 150px;
+  color: #d9d9d9;
+  &:hover{
+    border-color: #1890ff;
+    cursor: pointer;
+  }
 }
