--- a/src/app/pages/student/components/waiting-student/waiting-student.component.html
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.html
@@ -31,13 +31,13 @@
       <table-column header="Ngày đăng ký" key="createdDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
       <table-column header="Loại vé" key="ticket"></table-column>
       <table-column header="Số tiền" key="price" [width]="'150px'"></table-column>
-      <table-column header="Thanh toán" key="isPay" [width]="'180px'">
+      <table-column header="Trạng thái thanh toán" key="isPay" [width]="'180px'">
         <ng-template appCell let-data>
           <span *ngIf="data.isPay === 0">Chưa thanh toán</span>
           <span *ngIf="data.isPay === 1">Đã thanh toán</span>
           <span *ngIf="data.isPay === 2">Thanh toán một phần</span>
           <span *ngIf="data.isPay === 3">Thanh toán thừa</span>
-          <span *ngIf="data.isPay === 4">Thanh toán thừa</span>
+          <span *ngIf="data.isPay === 4">Hoàn học phí</span>
           <span *ngIf="data.isPay === 5">Hoàn tiền thừa</span>
         </ng-template>
       </table-column>
