--- a/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
+++ b/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
@@ -36,6 +36,17 @@
           </span>
         </div>
 
+<!--        <div nz-col [nzSpan]="8">-->
+<!--          <div class="text-label">Loại trang</div>-->
+
+<!--          <nz-select formControlName="type">-->
+<!--            <nz-option  [nzValue]="1" [nzLabel]="'Trang chủ'"></nz-option>-->
+<!--            <nz-option  [nzValue]="2" [nzLabel]="'Trang giới thiệu'"></nz-option>-->
+<!--            <nz-option  [nzValue]="3" [nzLabel]="'Trang liên hệ'"></nz-option>-->
+<!--          </nz-select>-->
+<!--        </div>-->
+
+
         <div nz-col [nzSpan]="16">
           <div class="text-label">Mô tả</div>
           <textarea nz-input placeholder="Nhập mô tả" formControlName="description" [nzAutosize]="{ minRows: 3}"></textarea>
