--- a/src/app/pages/website-config/components/footer-config/list-footer/list-footer.component.html
+++ b/src/app/pages/website-config/components/footer-config/list-footer/list-footer.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  Danh sách cấu hình header
+  Danh sách cấu hình footer
 </div>
 
 <div class="header-btn">
@@ -13,17 +13,18 @@
       [pageSize]="config.pageSize"
       [pageTotal]="config.rowTotal"
       [clientPagination]="false"
+      (onItemSelection)="getItemSelection($event)"
       (pageIndexChange)="page$.next($event)"
       (pageSizeChange)="pageSize$.next($event)"
       [loading]="loading"
     >
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="Ngày tạo" key="organizationEmail" [width]="'200px'"></table-column>
-      <table-column header="Vị trí" key="organizationName" [width]="'200px'"></table-column>
-      <table-column header="Tên hiển thị" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Ngày tạo" key="createdDate" [width]="'200px'"></table-column>
+      <table-column header="Vị trí" key="no" [width]="'200px'"></table-column>
+      <table-column header="Tên hiển thị" key="columnName" [width]="'200px'"></table-column>
       <table-column header="Page" key="organizationName" [width]="'200px'"></table-column>
-      <table-column header="Url" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Url" key="url" [width]="'200px'"></table-column>
       <table-column header="Parent Page" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column [width]="'180px'" fixColumn="right" >
