--- a/src/app/pages/website-config/components/header-config/list-header/list-header.component.html
+++ b/src/app/pages/website-config/components/header-config/list-header/list-header.component.html
@@ -23,9 +23,9 @@
       <table-column header="Ngày tạo" key="createdDate" [width]="'200px'"></table-column>
       <table-column header="Vị trí" key="no" [width]="'200px'"></table-column>
       <table-column header="Tên hiển thị" key="displayName" [width]="'200px'"></table-column>
-      <table-column header="Page" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Page" key="pageName" [width]="'200px'"></table-column>
       <table-column header="Url" key="url" [width]="'200px'"></table-column>
-      <table-column header="Parent Page" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Parent Page" key="navPageName" [width]="'200px'"></table-column>
       <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
