fix: change sone title header and footer

--- a/src/app/pages/email/components/create-notifications-email/create-notifications-email.component.html
+++ b/src/app/pages/email/components/create-notifications-email/create-notifications-email.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  <span>Thiết lập email thông báo</span>
+  {{isCreate? 'Tạo email thông báo' : 'Thiết lập email thông báo'}}
 </div>
 
 <div nz-row>
