--- a/src/app/pages/website-config/components/footer-config/list-footer/list-footer.component.html
+++ b/src/app/pages/website-config/components/footer-config/list-footer/list-footer.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  Danh sách cấu hình footer
+  Danh sách cấu hình chân trang
 </div>
 
 <div class="header-btn">
@@ -23,9 +23,9 @@
       <table-column header="Ngày tạo" key="createdDate" [width]="'200px'"></table-column>
       <table-column header="Tên cột" key="columnName" [width]="'200px'"></table-column>
       <table-column header="Tên hiển thị" key="displayName" [width]="'200px'"></table-column>
-      <table-column header="Vị trí" key="no" [width]="'200px'"></table-column>
-      <table-column header="Page" key="pageName" [width]="'200px'"></table-column>
-      <table-column header="Url" key="url" [width]="'200px'"></table-column>
+      <table-column header="Thứ tự" key="no" [width]="'200px'"></table-column>
+      <table-column header="Tên trang" key="pageName" [width]="'200px'"></table-column>
+      <table-column header="Đường dẫn" key="url" [width]="'200px'"></table-column>
       <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
