--- a/src/app/pages/website-config/components/header-config/list-header/list-header.component.html
+++ b/src/app/pages/website-config/components/header-config/list-header/list-header.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  Danh sách cấu hình header
+  Danh sách link điều hướng
 </div>
 
 <div class="header-btn">
@@ -25,8 +25,14 @@
       <table-column header="Tên hiển thị" key="displayName" [width]="'200px'"></table-column>
       <table-column header="Page" key="pageName" [width]="'200px'"></table-column>
       <table-column header="Url" key="url" [width]="'200px'"></table-column>
-      <table-column header="Parent Page" key="navPageName" [width]="'200px'"></table-column>
+      <table-column header="Thuộc đường dẫn" key="parentPageName" [width]="'200px'"></table-column>
       <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Trạng thái" key="status" [width]="'180px'">
+        <ng-template appCell let-data>
+          <span class="text-valid" *ngIf="data.status">Hiển thị</span>
+          <span class="text-invalid" *ngIf="!data.status">Không hiển thị</span>
+        </ng-template>
+      </table-column>
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
           Chức năng
