fix logic email and web config

--- a/src/app/pages/email/components/notifications-email-list/notifications-email-list.component.html
+++ b/src/app/pages/email/components/notifications-email-list/notifications-email-list.component.html
@@ -22,6 +22,7 @@
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Tên email" key="emailSubject" [width]="'200px'"></table-column>
+      <table-column header="Loại email" key="typeName" [width]="'250px'"></table-column>
       <table-column header="Tên buổi học" key="" [width]="'200px'"></table-column>
       <table-column header="Tên lớp học" key="" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
