--- a/src/app/pages/website-config/components/header-config/list-header/list-header.component.html
+++ b/src/app/pages/website-config/components/header-config/list-header/list-header.component.html
@@ -23,8 +23,8 @@
       <table-column header="Ngày tạo" key="createdDate" [width]="'200px'"></table-column>
       <table-column header="Vị trí" key="no" [width]="'200px'"></table-column>
       <table-column header="Tên hiển thị" key="displayName" [width]="'200px'"></table-column>
-      <table-column header="Page" key="pageName" [width]="'200px'"></table-column>
-      <table-column header="Url" key="url" [width]="'200px'"></table-column>
+      <table-column header="Tên trang" key="pageName" [width]="'200px'"></table-column>
+      <table-column header="Đường dẫn" key="url" [width]="'200px'"></table-column>
       <table-column header="Thuộc đường dẫn" key="parentPageName" [width]="'200px'"></table-column>
       <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'180px'">
