--- a/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
+++ b/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
@@ -41,8 +41,7 @@
 
           <nz-select formControlName="type">
             <nz-option  [nzValue]="1" [nzLabel]="'Trang chủ'"></nz-option>
-            <nz-option  [nzValue]="2" [nzLabel]="'Trang giới thiệu'"></nz-option>
-            <nz-option  [nzValue]="3" [nzLabel]="'Trang liên hệ'"></nz-option>
+            <nz-option  [nzValue]="2" [nzLabel]="'Trang thông thường'"></nz-option>
           </nz-select>
         </div>
 
