--- a/src/app/pages/website-config/components/header-config/edit-header/edit-header.component.html
+++ b/src/app/pages/website-config/components/header-config/edit-header/edit-header.component.html
@@ -35,34 +35,39 @@
           <nz-switch formControlName="status"></nz-switch>
         </div>
 
-        <div nz-col [nzSpan]="8">
+        <div nz-col [nzSpan]="11">
           <span class="text-label">
-            Link đến trang
+            Đường dẫn
           </span>
 
-          <div>
+          <div class="select-group">
             <nz-select
-              formControlName="pageId"
-              nzAllowClear
-              [nzStatus]="(headerForm.get('pageId')?.invalid && (headerForm.get('pageId')?.touched || isSubmit)) ? 'error' : ''"
+              class="link-to"
+              [(ngModel)]="external"
+              [ngModelOptions]="{standalone: true}" (ngModelChange)="onSelectExternal($event)"
             >
-              <nz-option
-                *ngFor="let page of listAllPage"
-                [nzValue]="page.id"
-                [nzLabel]="page.name"
-              >
-              </nz-option>
+              <nz-option [nzValue]="false" [nzLabel]="'Trong hệ thống'"></nz-option>
+              <nz-option [nzValue]="true" [nzLabel]="'Bên ngoài'"></nz-option>
             </nz-select>
-          </div>
 
-          <span class="text-danger"
-                *ngIf="(headerForm.get('pageId')?.touched || isSubmit) && headerForm.get('pageId')?.hasError('required')"
-          >
-            Trang được link đến không được để trống
-          </span>
+            <div class="link-place">
+              <nz-select
+                *ngIf="!external"
+                formControlName="pageId"
+                nzAllowClear>
+                <nz-option
+                  *ngFor="let page of listAllPage"
+                  [nzValue]="page.id"
+                  [nzLabel]="page.name">
+                </nz-option>
+              </nz-select>
+
+              <input *ngIf="external" nz-input formControlName="externalLink">
+            </div>
+          </div>
         </div>
 
-        <div nz-col [nzSpan]="8">
+        <div nz-col [nzSpan]="5">
           <span class="text-label">
             nằm trong đường dẫn
           </span>
