--- a/src/app/pages/website-config/components/header-config/edit-header/edit-header.component.scss
+++ b/src/app/pages/website-config/components/header-config/edit-header/edit-header.component.scss
@@ -46,3 +46,13 @@
 nz-select{
   display: block;
 }
+
+.select-group{
+  display: flex;
+  .link-to{
+    width: 200px;
+  }
+  .link-place{
+    flex: 1;
+  }
+}
